--- a/ogc_edr_lib/templates/jj2_base.html
+++ b/ogc_edr_lib/templates/jj2_base.html
@@ -9,7 +9,9 @@
     <meta name="keywords" content="{{ config['metadata']['identification']['keywords']|join(',') }}">
     <link rel="shortcut icon" href="{{ config['server']['url'] }}/static/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/mini.css@3.0.1/dist/mini-default.min.css">
+    <!--
     <link rel="stylesheet" href="{{ config['server']['url'] }}/static/css/default.css">
+  -->
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
@@ -26,7 +28,13 @@
     <header class="sticky row">
       <div class="col-sm-12 col-md-10 col-md-offset-1">
         <a href="{{ config['server']['url'] }}" class="logo" role="button">
-          <img src="{{ config['server']['url'] }}/static/img/logo.png" title="{{ config['metadata']['identification']['title'] }}" style="height:40px;vertical-align: middle;" /></a>
+          <!--
+          <img src="{{ config['server']['url'] }}/static/img/logo.png" title="{{ config['metadata']['identification']['title'] }}" style="height:40px;vertical-align: middle;" />
+        -->
+        <span style="height:40px;vertical-align: middle;">
+        {{ config['metadata']['identification']['title'] }}
+      </span>
+        </a>
         <!--
           Add additional menu items here
           <a href="https://pygeoapi.io" role="button" class="button">About</a>
