--- a/ogc_edr_lib/templates/jj2_collection_edr_position.html
+++ b/ogc_edr_lib/templates/jj2_collection_edr_position.html
@@ -10,13 +10,13 @@
 #}
 {% block extrahead %}
 
-    <link rel="stylesheet" type="text/css" href="http://labs.metoffice.gov.uk/edr/static/css/stackoverflow-dark.css">
+    <link rel="stylesheet" type="text/css" href="../../../static/css/stackoverflow-dark.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet-coverage@0.9.1/leaflet-coverage.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.css">
-    <link rel="stylesheet" type="text/css" href="http://labs.metoffice.gov.uk/edr/static/css/client.css">
+    <link rel="stylesheet" type="text/css" href="../../../static/css/client.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.8.0/d3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.12/c3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
@@ -24,9 +24,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.6.2/proj4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4leaflet/1.0.2/proj4leaflet.min.js"></script>
 
-    <script src="http://labs.metoffice.gov.uk/edr/static/js/covutils.src.js"></script>
-    <script src="http://labs.metoffice.gov.uk/edr/static/js/leaflet-coverage.src.js"></script>
-    <script src="http://labs.metoffice.gov.uk/edr/static/js/leaflet-singleclick.js"></script>
+    <script src="../../../static/js/covutils.src.js"></script>
+    <script src="../../../static/js/leaflet-coverage.src.js"></script>
+    <script src="../../../static/js/leaflet-singleclick.js"></script>
     <script>
       base_server_url = null;
       try{
