--- a/ogc_edr_lib/templates/jj2_collection_edr_area.html
+++ b/ogc_edr_lib/templates/jj2_collection_edr_area.html
@@ -838,8 +838,8 @@
           }
       }
     </script>
-    <script src="http://labs.metoffice.gov.uk/edr/static/js/line-interpolate-points.js"></script>
-    <script src="http://labs.metoffice.gov.uk/edr/static/js/time_duration.js"></script>
+    <script src="../../../static/js/line-interpolate-points.js"></script>
+    <script src="../../../static/js/time_duration.js"></script>
     <script src="https://cdn.jsdelivr.net/covjson-reader/0.16.3/covjson-reader.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wicket/1.3.6/wicket.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.0.0/highlight.min.js"></script>
@@ -2153,20 +2153,28 @@
 
   function createLayer(cov, opts) {
       let layer = C.dataLayer(cov, opts).on('afterAdd', e => {
-          let covLayer = e.target
-          console.log('layer added:', covLayer)
+          let covLayer = e.target;
+          console.log('for area - layer added:', covLayer);
 
           // This registers the layer with the sync manager.
           // By doing that, the palette and extent get unified (if existing)
           // and an event gets fired if a new parameter was added.
           // See the code above where ParameterSync gets instantiated.
-          paramSync.addLayer(covLayer)
+          try{
+            paramSync.addLayer(covLayer);
+          }catch(err){
+            console.error(err)
+          }
+          console.log("paramSync.addLayer ... done");
+
           if (!cov.coverages) {
+              console.log("Here in cov.coverages");
               if (covLayer.time) {
-                  new C.TimeAxis(covLayer).addTo(map)
+                  console.log("Here in cov.coverages");
+                  new C.TimeAxis(covLayer).addTo(map);
               }
               if (covLayer.vertical) {
-                  new C.VerticalAxis(covLayer).addTo(map)
+                  new C.VerticalAxis(covLayer).addTo(map);
               }
           }
       }).on('dataLoad', () => map.fire('dataload'))
