--- a/ogc_edr_lib/templates/jj2_collection_edr_location.html
+++ b/ogc_edr_lib/templates/jj2_collection_edr_location.html
@@ -10,13 +10,13 @@
 #}
 {% block extrahead %}
 
-    <link rel="stylesheet" type="text/css" href="../../../static/css/stackoverflow-dark.css">
+    <link rel="stylesheet" type="text/css" href="../../../../static/css/stackoverflow-dark.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet-coverage@0.9.1/leaflet-coverage.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.css">
-    <link rel="stylesheet" type="text/css" href="../../../static/css/client.css">
+    <link rel="stylesheet" type="text/css" href="../../../../static/css/client.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.8.0/d3.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.12/c3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
@@ -24,9 +24,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.6.2/proj4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4leaflet/1.0.2/proj4leaflet.min.js"></script>
 
-    <script src="../../../static/js/covutils.src.js"></script>
-    <script src="../../../static/js/leaflet-coverage.src.js"></script>
-    <script src="../../../static/js/leaflet-singleclick.js"></script>
+    <script src="../../../../static/js/covutils.src.js"></script>
+    <script src="../../../../static/js/leaflet-coverage.src.js"></script>
+    <script src="../../../../static/js/leaflet-singleclick.js"></script>
     <script>
       base_server_url = "{{ config['server']['url'] }}";
       // default_query_collection_id = "imerggdl_20220301"
@@ -838,8 +838,8 @@
           }
       }
     </script>
-    <script src="../../../static/js/line-interpolate-points.js"></script>
-    <script src="../../../static/js/time_duration.js"></script>
+    <script src="../../../../static/js/line-interpolate-points.js"></script>
+    <script src="../../../../static/js/time_duration.js"></script>
     <script src="https://cdn.jsdelivr.net/covjson-reader/0.16.3/covjson-reader.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wicket/1.3.6/wicket.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.0.0/highlight.min.js"></script>
